# gvai-safety-systems

./: CONTRIBUTING.md  README.md  SECURITY.md  hybrid_entropy_monitor.py  index.html  pyproject.toml
.github/workflows/: tests.yml
dashboard/: agent.js  gvbot.js  index.html  style.css
dashboard/data/: demo_signals.csv  kv_index.json
docs/: architecture.md
examples/: basic_demo.py  runtime_guard_demo.py
gvai/: __init__.py  cli.py  gv_core.py  sentinel.py  thresholds.py
gvai/runtime_guard/: __init__.py  guard.py  signals.py
tests/: test_gv_core.py  test_runtime_guard.py  test_sentinel.py  test_thresholds.py
